k8s/networkpolicy/40-search/allow-core-to-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-to-elasticsearch
  namespace: bravo-efk-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-core-ns
    ports:
    - protocol: TCP
      port: 9200
