k8s/networkpolicy/40-search/allow-monstache-to-es.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monstache-to-es
  namespace: bravo-efk-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-efk-ns
    ports:
    - protocol: TCP
      port: 9200
